--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
-    "react-i18next": "^15.7.2",
+    "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^7.8.1",
@@ -73,6 +73,7 @@
     "@types/papaparse": "^5.3.16",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "@types/react-i18next": "^7.8.3",
     "@vitejs/plugin-react": "^5.0.0",
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
